@@ -1,4 +1,6 @@
 
 This will install the libavg library on your computer. Installation can take a while - be patient.
 
-After the installer runs, there are a few steps left to get libavg up and running. These are detailed in http://www.libavg.de/install.php.
+After the installer runs, please make sure that everything works by running the tests. To do this, open a terminal, cd to /Library/Python/2.5/site-packages/libavg/avg/test and call ./Test.py. You should see some test graphics flicker on the screen. The last message in the terminal should read 'OK'.
+
+We welcome your feedback. See http://www.libavg.de/feedback.php for details.
