@@ -1,2 +1,1 @@
 
-Kiss Director goodbye!
